--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,11 @@
             <artifactId>gson</artifactId>
             <version>2.8.8</version>
         </dependency>
-
+        <dependency>
+            <groupId>no.tornado</groupId>
+            <artifactId>tornadofx-controls</artifactId>
+            <version>1.0.3</version>
+        </dependency>
         <!-- https://mvnrepository.com/artifact/com.googlecode.json-simple/json-simple -->
         <dependency>
             <groupId>com.googlecode.json-simple</groupId>
